# todos-api

./: .gitignore  Cargo.toml
migrations/: 20220511181629_create_notes.sql
src/: auth.rs  filter.rs  handler.rs  main.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/model/: mod.rs
src/repository/: mod.rs  note.rs
